amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-provides.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/arguments-provides.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#provides-external
  Message: 'error' should be declared as @external to be used in @provides
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-provides.graphql#/declares/shape/Review/property/property/product
  Property: http://a.ml/vocabularies/federation#provides
  Range: [(3,4)-(3,46)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#unmatched-field-in-field-set
  Message: Property 'name' referenced by field set cannot have arguments
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/arguments-provides.graphql#/declares/shape/Review/property/property/product
  Property: 
  Range: [(3,40)-(3,44)]
  Location: 
